[project]
name = "python-fastapi-example"
version = "0.1.0"
description = "API CRUD FastAPI + Beanie + MongoDB"
authors = [
    {name = "Frédéric Esnault"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "beanie (>=1.29.0,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "mangum (>=0.19.0,<0.20.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-asyncio = "^1.0.0"
httpx = "^0.28.1"
asgi-lifespan = "^2.1.0"

